--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "apollo-link-context": "^1.0.20",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "devextreme": "22.1",
+    "devextreme-vue": "22.1",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "lodash-es": "^4.17.21",
     "vue": "^3.2.13",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2"
