--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "core-js": "^3.8.3",
     "devextreme": "22.1",
     "devextreme-vue": "22.1",
+    "exceljs": "^4.3.0",
+    "file-saver-es": "^2.0.5",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "lodash-es": "^4.17.21",
