--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-link-context": "^1.0.20",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.5",
     "devextreme": "22.1",
     "devextreme-vue": "22.1",
     "exceljs": "^4.3.0",
@@ -22,6 +23,7 @@
     "graphql-tag": "^2.12.6",
     "lodash-es": "^4.17.21",
     "vue": "^3.2.13",
+    "vue-dayjs": "^1.0.2",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2"
   },
