--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "lodash-es": "^4.17.21",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.2",
     "vue": "^3.2.13",
     "vue-dayjs": "^1.0.2",
     "vue-router": "^4.1.3",
