--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@vue/apollo-composable": "^4.0.0-alpha.19",
     "ant-design-vue": "^3.2.11",
     "apollo-link-context": "^1.0.20",
-    "axios": "^0.27.2",
+    "axios": "^0.27.2", 
     "core-js": "^3.8.3",
     "dayjs": "^1.11.5",
     "devextreme": "22.1",
@@ -22,10 +22,12 @@
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "lodash-es": "^4.17.21",
-    "vue": "^3.2.13",
+    "moment": "^2.29.4", 
+    "vue": "^3.2.13", 
     "vue-dayjs": "^1.0.2",
     "vue-router": "^4.1.3",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
