--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash-es": "^4.17.21",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.2",
+    "ts-loader": "^9.3.1",
     "vue": "^3.2.13",
     "vue-dayjs": "^1.0.2",
     "vue-router": "^4.1.3",
