--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-saver-es": "^2.0.5",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "node-sass": "^7.0.1",
     "sass": "^1.54.8",
