--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "jangbuda-fe",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -24,39 +25,19 @@
     "lodash-es": "^4.17.21",
     "moment": "^2.29.4", 
     "vue": "^3.2.13", 
+    "node-sass": "^7.0.1",
+    "sass": "^1.54.8",
+    "sass-loader": "^13.0.2",
+    "ts-loader": "^9.3.1", 
     "vue-dayjs": "^1.0.2",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.5.16"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "@vitejs/plugin-vue": "^3.1.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0",
+    "vue-tsc": "^0.40.4"
+  }
 }
