--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "@apollo/client": "^3.6.9",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
     "ant-design-vue": "^3.2.11",
     "apollo-link-context": "^1.0.20",
-    "axios": "^0.27.2", 
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.5",
     "devextreme": "22.1",
@@ -23,12 +24,12 @@
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "lodash-es": "^4.17.21",
-    "moment": "^2.29.4", 
-    "vue": "^3.2.13", 
+    "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "sass": "^1.54.8",
     "sass-loader": "^13.0.2",
-    "ts-loader": "^9.3.1", 
+    "ts-loader": "^9.3.1",
+    "vue": "^3.2.13",
     "vue-dayjs": "^1.0.2",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2",
