--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-saver-es": "^2.0.5",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "hangul-search-js": "^1.0.5",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
