--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "vue": "^3.2.13",
     "vue-dayjs": "^1.0.2",
     "vue-router": "^4.1.3",
-    "vuex": "^4.0.2",
-    "yarn": "^1.22.19"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
