--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.6.9",
     "@types/file-saver-es": "^2.0.1",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
+    "@vuepic/vue-datepicker": "^3.4.8",
     "ant-design-vue": "^3.2.11",
     "apollo-link-context": "^1.0.20",
     "axios": "^0.27.2",
