--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   publish:
-    runs-on: [ self-hosted, linux, x64 ]
+    # runs-on: [ self-hosted, linux, x64 ]
+    runs-on: ubuntu-latest
     if: github.event_name == 'push'
 
     steps:
@@ -23,24 +24,33 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets._AUTH_TOKEN}}
 
-      - name: Install Yarn
-        run: npm install -g yarn
+      # - name: Install Yarn
+      #   run: npm install -g yarn
 
-      - name: Check yarn cache
-        uses: actions/cache@v2
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+      # - name: Check yarn cache
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: '**/node_modules'
+      #     key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+
+      # - name: Install packages
+      #   if: steps.yarn-cache.outputs.cache-hit != 'true'
+      #   run: yarn install
+      #   env:
+      #     CI: true
+      #     NODE_AUTH_TOKEN: ${{secrets._AUTH_TOKEN}}
+
+      # - name: Build vue
+      #   run: yarn run build
 
       - name: Install packages
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn install
+        run: npm install
         env:
           CI: true
           NODE_AUTH_TOKEN: ${{secrets._AUTH_TOKEN}}
 
       - name: Build vue
-        run: yarn run build
+        run: npm run build
 
       - name: Upload S3 and Deploy CloudFront
         uses: lbertenasco/s3-deploy@v1
