--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ts-loader": "^9.3.1",
     "vue": "^3.2.13",
     "vue-dayjs": "^1.0.2",
+    "vue-number-format": "^1.3.1",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2",
     "yarn": "^1.22.19"
