--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dayjs": "^1.11.5",
     "devextreme": "22.1",
     "devextreme-vue": "22.1",
+    "enum": "^3.0.4",
+    "enumify": "^2.0.0",
     "exceljs": "^4.3.0",
     "file-saver-es": "^2.0.5",
     "graphql": "^16.6.0",
@@ -28,6 +30,7 @@
     "node-sass": "^7.0.1",
     "sass": "^1.54.8",
     "sass-loader": "^13.0.2",
+    "ts-enum-util": "^4.0.2",
     "ts-loader": "^9.3.1",
     "vue": "^3.2.13",
     "vue-dayjs": "^1.0.2",
