--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-saver-es": "^2.0.5",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "sass": "^1.54.8",
@@ -42,6 +43,8 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.187",
+    "@types/webpack-env": "^1.18.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
