--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@bankda/jangbuda-common": "^0.7.3",
+    "@trandung1291/common-tsv": "^0.0.4",
     "@types/file-saver-es": "^2.0.1",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
     "@vuepic/vue-datepicker": "^3.4.8",
