--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "serve": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check-ts": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
