--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "serve": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "check-ts": "vue-tsc --noEmit"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
