--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "serve": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "start": "node --max-old-space-size=8192 node_modules/vite/dist/node/cli.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
