--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ on:
 
 jobs:
   build:
-    # runs-on: [ self-hosted, linux, x64 ]
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, linux, x64, self-hosted-fe ]
+    # runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
