--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   publish:
-    # runs-on: [ self-hosted, linux, x64 ]
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, linux, x64, self-hosted-fe ]
+    # runs-on: ubuntu-latest
     if: github.event_name == 'push'
 
     steps:
